Fixed the broken alignement of aromatics

--- a/app/assets/stylesheets/potagers/show.scss
+++ b/app/assets/stylesheets/potagers/show.scss
@@ -80,10 +80,10 @@
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(270px, 1fr));
-  width: 100%;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   grid-gap: 30px;
-  justify-items: center;
+  width: 100%;
+  justify-content: center;
 }
 
 .card {
